  - Fix tag commands not giving correct feedback.
  - Fix /n set tag missing a tabcompleter.
    - Closes #4540.
  - Fix nations and towns being able to send an invite to towns and residents which are already members.
    - Closes #4539.
  - Fix nationrank add/remove commands failing when the command sender fails to use the proper casing.
    - Closes #4538.
  - Rework town and nation withdraw/deposit to reduce redundancies.
  - Add space to ranks separator, courtesy of illumeleet with PR #4549 (First-Time Contributor!)
  - Fix onPlayerFishEvent double negative, courtesy of Warriorrrr with PR #4547 (First-Time Contributor!)
  - New Config Option: town.default_neutral
    - Default: false
    - Default neutral status of the town (are new towns neutral by default?)
  - Do not shade in jetbrain annotations, courtesy of silverwolfg11 with PR #4528.
0.96.5.5:
  - API: ResidentJailEvent & ResidentUnjailEvent courtesy of Kovalskki with PR #4560 (First-Time Contributor!)
  - Fix plot group's setting plot type showing message for each plot in the group (when there was no cost to set the type.)
  - Fix cactus no longer hurting minecarts.
    - Closes #4561.
  - Fix null UUID on NationAddTownEvent, courtesy of silverwolfg11 with PR #4559.
  - Fix not being able to set town and nation names.
    - Closes #4567.
  - Create TownPreUnclaimCmdEvent, Relocate and extend Town(Pre)UnclaimEvents, courtesy of TheFlagCourier with PR #4537.
  - API: Add NationPreTownKickEvent which extends the NationPreTownLeaveEvent.
  - Clean up the nationKick method & use translatable message in more cancellable events.
  - Deprecate getMaxPurchedBlocks and replace with getMaxPurchasedBlocks, courtesy of Momshroom with PR #4572.
  - Update es-419.yml to 0.93, courtesy of EuGNosii with PR #4573.
  - Backend Resident UUID Implementation, courtesy of silverwolfg11 with PR #4510.
    - Creates methods to get Resident objects via a player UUID.
	- Create register / unregister methods for residents.